<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#ffeff9"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvVar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/winner"
        android:layout_width="411dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-small caps"
        android:text=""
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/llPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="30sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/computer"
            android:paddingStart="20sp"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/player"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp">

        <ImageView
            android:id="@+id/diceComputer"
            android:layout_width="147dp"
            android:layout_height="139dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/dice6" />

        <ImageView
            android:id="@+id/dicePlayer"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"
            android:src="@drawable/dice6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/playScore"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/player_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number"
            android:layout_marginStart="10sp"
            android:textColor="#000000"
            android:textSize="25sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">

        <TextView

            android:id="@+id/computer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comScore"
            android:paddingLeft="10dp"
            android:textColor="#000000"
            android:inputType="number"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/computer_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number"
            android:textColor="#000000"
            android:layout_marginStart="10sp"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/diceButton"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/button"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <Button
        android:id="@+id/restart"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:text="@string/restart"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>
